--- a/master.tex
+++ b/master.tex
@@ -13,15 +13,16 @@
 \def \projectsubtitle    {Projektundertitel}
 \def \projecttheme       {Projekttema}
 \def \projectdegree      {Matematik}  % eller Matematik-Økonomi/Teknologi
-\def \projectperiod      {Efterårssemesteret 20XX}
-\def \projectnumber      {P1}
-\def \projectgroup       {X123}
+\def \projectperiod      {Forårssemesteret 20XX}
+\def \projectnumber      {P2}
+\def \projectgroup       {B303c}
 \def \projectauthors     {
-  Projektforfatter 1\\
-  Projektforfatter 2\\
-  Projektforfatter 3\\
-  Projektforfatter 4
-  % ...
+	Jens Koldkur\\
+	Jonas Bach Christensen\\
+	Julie Havbo Lund\\
+	Mads Bjerregaard Kjær\\
+	Mathias Gammelgaard\\
+	Rasmus Jespersgaard
 }
 \def \projectsupervisors {
   Projektvejleder 1\\
