--- a/incl/pre/conf.tex
+++ b/incl/pre/conf.tex
@@ -72,6 +72,22 @@
 \floatname{algorithm}{Algoritme}
 \renewcommand{\listalgorithmname}{Algoritmer}
 
+% Array styling -------------------------------------------------------------------
+\renewcommand{\arraystretch}{1.2}
+
+% Kode import --------------------------------------------------------------------
+\lstdefinestyle{mystyle}{
+    breakatwhitespace	=false,         
+    breaklines			=true,                 
+    captionpos			=b,
+    keepspaces			=true,
+    numbersep			=5pt,
+    showspaces			=false,
+    showstringspaces	=false,
+    showtabs			=false,
+    tabsize				=4
+}
+
 % Kildekode --------------------------------------------------------------------
 % Syntax highlighting for Python-kode
 % https://en.wikibooks.org/wiki/LaTeX/Source_Code_Listings
