--- a/incl/pre/ext/aautitlepage.sty
+++ b/incl/pre/ext/aautitlepage.sty
@@ -37,7 +37,7 @@
 % ------------------------------------------------------------------------------
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{aautitlepage}
+%\ProvidesPackage{aautitlepage}
 \usepackage{calc}
 \usepackage{lastpage}
 
@@ -82,8 +82,8 @@
     \textbf{Tema}\\\-\ #2\bigskip\par
     \textbf{Projektperiode}\\\-\ #3\bigskip\par
     \textbf{Projektgruppe}\\\-\ #4\bigskip\par
-    \textbf{Deltager(e)}\\\-\ #5\bigskip\par
-    \textbf{Vejleder(e)}\\\-\ #6\bigskip\par
+    \textbf{Deltagere}\\\-\ #5\bigskip\par
+    \textbf{Vejleder}\\\-\ #6\bigskip\par
     \textbf{Sidetal}\\\-\ \pageref{LastPage}\bigskip\par
     \textbf{Afleveringsdato}\\\-\ #7
   }
