--- a/incl/pre/cmds.tex
+++ b/incl/pre/cmds.tex
@@ -18,14 +18,14 @@
 % Sætninger o.lign. ------------------------------------------------------------
 % http://www.ctex.org/documents/packages/math/amsthdoc.pdf
 \theoremstyle{plain}                 % Titel med fed, tekst med skråskrift
-\newtheorem{thm}{Sætning}[chapter]   % Sætninger, nummereret efter kapitel
-\newtheorem{lem}[thm]{Lemma}         % Lemmaer, nummereret ligesom sætninger
-\newtheorem{prop}[thm]{Proposition}  % Propositioner, nummereret ligesom sætninger
-\newtheorem*{cor}{Korollar}         % Korollarer, unnumbered
+%\newtheorem{thm}{Sætning}[chapter]   % Sætninger, nummereret efter kapitel
+%\newtheorem{lem}[thm]{Lemma}         % Lemmaer, nummereret ligesom sætninger
+%\newtheorem{prop}[thm]{Proposition}  % Propositioner, nummereret ligesom sætninger
+%\newtheorem*{cor}{Korollar}         % Korollarer, unnumbered
 
 \theoremstyle{definition}            % Title med fed, opretstående tekst
-\newtheorem{defn}[thm]{Definition}   % Definitioner, nummereret ligesom sætninger
-\newtheorem{eks}[thm]{Eksempel}      % Eksempler, nummereret ligesom sætninger
+%\newtheorem{defn}[thm]{Definition}   % Definitioner, nummereret ligesom sætninger
+%\newtheorem{eks}[thm]{Eksempel}      % Eksempler, nummereret ligesom sætninger
 
 %farvet-commands
 \definecolor{myblue}{RGB}{89, 79, 191}
@@ -33,7 +33,7 @@
 \definecolor{myred}{RGB}{223, 103, 82}
 \definecolor{mygrey}{RGB}{222, 223, 226}
 \newtcbtheorem[auto counter, number within = chapter]
-{defncol}
+{defn}
 {Definition}
 {
 colback		= myblue!15,
@@ -46,7 +46,7 @@ fonttitle	= \bfseries
 {defn}
 
 \newtcbtheorem[auto counter, number within = chapter]
-{lemcol}
+{lem}
 {Lemma}
 {
 colback		= myblue!15,
@@ -60,7 +60,7 @@ fonttitle	= \bfseries
 
 
 \newtcbtheorem[auto counter, number within = chapter]
-{korcol}
+{kor}
 {Korollar}
 {
 colback		= myblue!15,
@@ -73,7 +73,7 @@ fonttitle	= \bfseries
 {kor}
 
 \newtcbtheorem[auto counter, number within = chapter]
-{thmcol}
+{thm}
 {Sætning}
 {
 colback		= myblue!15,
