--- a/incl/main/linear_algebra/lineare_ligningssystemer.tex
+++ b/incl/main/linear_algebra/lineare_ligningssystemer.tex
@@ -1,2 +1,94 @@
-\section{Lineære ligningsystemer }
-% xD
+%Matrixvektorproduct
+\begin{defn}{}{}
+\phantom{gdfs}\\Lad $A$ være en $m$ $x$ $n$ matrix og \textbf{v} være en $n$ $x$ $1$ vektor. Matrix-vektor-produktet af A og \textbf{v} defineres som den lineære kombination af søjlerne i A hvis koefficienter er de tilsvarende komponenter af \textbf{v}, og noteres A\textbf{v}. Det vil sige
+\begin{align*}
+A\textbf{v} =v_1\textbf{a}_1 + v_2\textbf{a}_2 + \cdots + v_n\textbf{a}_n
+\end{align*}
+\end{defn}
+\noindent
+For at $A\textbf{v}$ eksisterer, skal der være lige mange komponenter i \textbf{v} som søjler i $A$.
+\begin{center} 
+$$B=
+\begin{bmatrix}
+2 & 5 & 6 \\
+4 & 7 & 3\\
+1 & 4 & 1\\
+2 & 3 & 8\\
+\end{bmatrix}
+%
+\text{ og }
+%
+\textbf{u}=
+\begin{bmatrix}
+4 \\
+2 \\
+3 \\ 
+\end{bmatrix}
+$$
+
+$$
+B\textbf{u}=
+\begin{bmatrix}
+2 & 5 & 6 \\
+4 & 7 & 3\\
+1 & 4 & 1\\
+2 & 3 & 8\\
+\end{bmatrix}
+\begin{bmatrix}
+4 \\
+2 \\
+3 \\ 
+\end{bmatrix}
+=4
+\begin{bmatrix}
+2\\
+4\\
+1\\
+2\\
+\end{bmatrix}
++2
+\begin{bmatrix}
+5\\
+7\\
+4\\
+3\\
+\end{bmatrix}
++3
+\begin{bmatrix}
+6\\
+3\\
+1\\
+8\\
+\end{bmatrix}
+=
+\begin{bmatrix}
+8\\
+16\\
+4\\
+8\\
+\end{bmatrix}
++
+\begin{bmatrix}
+10\\
+14\\
+8\\
+6\\
+\end{bmatrix}
++
+\begin{bmatrix}
+18\\
+9\\
+3\\
+24\\
+\end{bmatrix}
+=
+\begin{bmatrix}
+36\\
+39\\
+15\\
+38\\
+\end{bmatrix}
+$$
+\end{center}
+\section{Lineære ligningssystemer }
+%
