--- a/incl/main/linear_algebra/gauss_elimination.tex
+++ b/incl/main/linear_algebra/gauss_elimination.tex
@@ -1,2 +1,40 @@
 \section{Gauss elimination}
-%hehe
+%sætning 1.4 kan vi bevise den
+En algoritme til løsningen af linære ligningssystemer er  rækkereduktionsalgoritmen, som omdanner en matrix fra en totalmatrice til reduceret trappeform.
+Når den bruges til at løse linære ligningssystemer, kaldes denne process for Gauss elimination.
+I algoritmen bruges de elemæntere rækkeoperationer for at omdanne en matrix $A$ til trappeform. 
+Herefter benyttes rækkeoperationerne igen til at omdanne matricen på trappeform til reduceret trappeform.
+Algortimen gennemgår således følgende skridt:
+%
+\begin{enumerate}
+\item Find første ikke-nul søjlse i $A$ fra venstre.
+\item Ved rækkeombytning placeres en ikke-nul indgang øverst i pivot-søjlen.
+\item Skab nuller under pivot-indgangen øverst i pivot-søjlen ved hjælp af rækkeudskiftning.
+\item Øverste række markeres som afsluttet og trin $1-3$ gennemføres nu på den næste række.
+\item Alle rækker med pivot-indgange skaleres så alle pivot-indgange er lig $1$.
+\item Ved rækkeudskiftning sikres nu $0$er over og under pivot-indgangene.
+\end{enumerate}
+% Eksempel
+Givet ligningssystemet:
+\begin{align*}
+x_1-x_3-2x_4-8x_5&=-3 \\
+-2x_1+x_3+2x_4+9x_5&=5 \\
+3x_1-2x_3-3x_4-15x_5&=-9 \\
+\end{align*}
+\[
+\begin{blockarray}{cccccc}
+a & b & c & d & e \\
+\begin{block}{[ccccc]c}
+  1 & 1 & 1 & 1 & 1 & f \\
+  0 & 1 & 0 & 0 & 1 & g \\
+  0 & 0 & 1 & 0 & 1 & h \\
+  0 & 0 & 0 & 1 & 1 & i \\
+  0 & 0 & 0 & 0 & 1 & j \\
+\end{block}
+\end{blockarray}
+ \]
+
+\end{document}
+
+\begin{thm}{}{konsitens}
+\end{thm}
