--- a/incl/pre/pkgs.tex
+++ b/incl/pre/pkgs.tex
@@ -48,3 +48,4 @@
 % Pakken aautitlepage indholder modificerede makroer fra en tredjepart.
 % Se incl/pre/ext/aautitlepage.sty for detaljer
 \usepackage{incl/pre/ext/aautitlepage}
+\usepackage{blkarray}
