--- a/incl/main/linear_algebra/linear_algebra.tex
+++ b/incl/main/linear_algebra/linear_algebra.tex
@@ -1,3 +1,4 @@
 \chapter{Lineær algebra}
 %
 \input{incl/main/linear_algebra/matricer_vektorer/matricer.tex}
+	\input{incl/main/linear_algebra/matricer_vektorer/mxsum.tex}
