--- a/master.tex
+++ b/master.tex
@@ -58,8 +58,8 @@
 	
 % LINEÆRE ALGEBRA 
 	\include{incl/main/linear_algebra/linear_algebra}
-%	\include{incl/main/linear_algebra/lineare_ligningssystemer}
-%	\include{incl/main/linear_algebra/gauss_elimination}
+	\include{incl/main/linear_algebra/lineare_ligningssystemer}
+	\include{incl/main/linear_algebra/gauss_elimination}
 
 % Appendicer indsættes inde i en appendices-blok og bliver nummereret med
 % bogstaver i stedet for tal
