Update mxsum.tex and cmds.tex

--- a/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
@@ -1,2 +1,10 @@
 \subsection{Matrixsum}
 %
+\begin{defn}{}{}
+Lad $A$ og $B$ være $m \times n$ matricer.
+\textbf{Summen} af $A$ og $B$, noteret $A + B$, er matricen, hvor \begin{align*}
+(A + B)_{ij} = A_{ij} + B_{ij},
+\end{align*}
+for alle indgange.
+\end{defn}
+%
