Update cmds.tex and conf.tex

--- a/incl/pre/cmds.tex
+++ b/incl/pre/cmds.tex
@@ -17,15 +17,15 @@
 
 % Sætninger o.lign. ------------------------------------------------------------
 % http://www.ctex.org/documents/packages/math/amsthdoc.pdf
-\theoremstyle{plain}                 % Titel med fed, tekst med skråskrift
+%\theoremstyle{plain}                 % Titel med fed, tekst med skråskrift
 %\newtheorem{thm}{Sætning}[chapter]   % Sætninger, nummereret efter kapitel
 %\newtheorem{lem}[thm]{Lemma}         % Lemmaer, nummereret ligesom sætninger
 %\newtheorem{prop}[thm]{Proposition}  % Propositioner, nummereret ligesom sætninger
 %\newtheorem*{cor}{Korollar}         % Korollarer, unnumbered
 
-\theoremstyle{definition}            % Title med fed, opretstående tekst
-%\newtheorem{defn}[thm]{Definition}   % Definitioner, nummereret ligesom sætninger
-\newtheorem{eks}[thm]{Eksempel}      % Eksempler, nummereret ligesom sætninger
+\theoremstyle{definition}          	% Title med fed, opretstående tekst
+%\newtheorem{defn}[thm]{Definition} % Definitioner, nummereret ligesom sætninger
+\newtheorem{eks}{Eksempel}     		% Eksempler, nummereret ligesom sætninger
 
 %farvet-commands
 \definecolor{myblue}{RGB}{89, 79, 191}
