--- a/incl/main/linear_algebra/matricer_vektorer/matricer.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/matricer.tex
@@ -1,4 +1,15 @@
 \section{Matricer og vektorer}
 % God arbejdslyst 
 
-Asdasdfasdf
+%Noget indledningsvist - hvorfor er matricer/vektorer vigtige? 
+
+Matricer er nyttige i forbindelse med løsning af lineære ligningssystemer. 
+
+\begin{defn}{Matrix}{}
+En \textit{matrix} er en rektangulær tabel, hvis elementer er $k \in \R$. 
+En matrix med $m$ rækker og $n$ søjler kaldes en $m \times n$ matrix.
+Hvis $m=n$, er matricen kvadratisk. 
+Et element $a_{ij}$ i $i'te$ række og $j'te$ søjle kaldes $(i, j)-indgangen$ i matricen. 
+\end{defn}
+
+
