Update mxsum.tex and cmds.tex

--- a/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
@@ -2,9 +2,17 @@
 %
 \begin{defn}{}{}
 Lad $A$ og $B$ være $m \times n$ matricer.
-\textbf{Summen} af $A$ og $B$, noteret $A + B$, er matricen, hvor \begin{align*}
-(A + B)_{ij} = A_{ij} + B_{ij},
+\textbf{Summen} af $A$ og $B$, noteret $A + B$, er matricen, hvor
+\begin{align*}
+(A + B)_{i,j} = a_{i,j} + b_{i,j},
 \end{align*}
 for alle indgange.
+Lad $k$ være en skalar.
+\textbf{Skalarproduktet} af $A$, noteret $kA$, er en $m \times n$ matrix, hvor
+\begin{align*}
+(kA)_{i,j} = ka_{i,j},
+\end{align*}
+for alle indgange.
+
 \end{defn}
 %
