--- a/incl/pre/cmds.tex
+++ b/incl/pre/cmds.tex
@@ -25,7 +25,7 @@
 
 \theoremstyle{definition}          	% Title med fed, opretstående tekst
 %\newtheorem{defn}[thm]{Definition} % Definitioner, nummereret ligesom sætninger
-\newtheorem{eks}{Eksempel}     		% Eksempler, nummereret ligesom sætninger
+\newtheorem{eks}[chapter]{Eksempel}     		% Eksempler, nummereret ligesom sætninger
 
 %farvet-commands
 \definecolor{myblue}{RGB}{89, 79, 191}
