--- a/incl/main/linear_algebra/lineare_ligningssystemer.tex
+++ b/incl/main/linear_algebra/lineare_ligningssystemer.tex
@@ -1,94 +1,27 @@
-%Matrixvektorproduct
-\begin{defn}{}{}
-\phantom{gdfs}\\Lad $A$ være en $m$ $x$ $n$ matrix og \textbf{v} være en $n$ $x$ $1$ vektor. Matrix-vektor-produktet af A og \textbf{v} defineres som den lineære kombination af søjlerne i A hvis koefficienter er de tilsvarende komponenter af \textbf{v}, og noteres A\textbf{v}. Det vil sige
-\begin{align*}
-A\textbf{v} =v_1\textbf{a}_1 + v_2\textbf{a}_2 + \cdots + v_n\textbf{a}_n
-\end{align*}
-\end{defn}
-\noindent
-For at $A\textbf{v}$ eksisterer, skal der være lige mange komponenter i \textbf{v} som søjler i $A$.
-\begin{center} 
-$$B=
-\begin{bmatrix}
-2 & 5 & 6 \\
-4 & 7 & 3\\
-1 & 4 & 1\\
-2 & 3 & 8\\
-\end{bmatrix}
-%
-\text{ og }
-%
-\textbf{u}=
-\begin{bmatrix}
-4 \\
-2 \\
-3 \\ 
-\end{bmatrix}
-$$
-
-$$
-B\textbf{u}=
-\begin{bmatrix}
-2 & 5 & 6 \\
-4 & 7 & 3\\
-1 & 4 & 1\\
-2 & 3 & 8\\
-\end{bmatrix}
-\begin{bmatrix}
-4 \\
-2 \\
-3 \\ 
-\end{bmatrix}
-=4
-\begin{bmatrix}
-2\\
-4\\
-1\\
-2\\
-\end{bmatrix}
-+2
-\begin{bmatrix}
-5\\
-7\\
-4\\
-3\\
-\end{bmatrix}
-+3
-\begin{bmatrix}
-6\\
-3\\
-1\\
-8\\
-\end{bmatrix}
-=
-\begin{bmatrix}
-8\\
-16\\
-4\\
-8\\
-\end{bmatrix}
-+
-\begin{bmatrix}
-10\\
-14\\
-8\\
-6\\
-\end{bmatrix}
-+
-\begin{bmatrix}
-18\\
-9\\
-3\\
-24\\
-\end{bmatrix}
-=
-\begin{bmatrix}
-36\\
-39\\
-15\\
-38\\
-\end{bmatrix}
-$$
-\end{center}
 \section{Lineære ligningssystemer }
 %
+
+\textbf{En lineær ligning} med variablerne, $x_1,x_2,\ldots ,x_n$, er en ligning som har formen
+$$ a_1x_1+a_2x_2+\cdots+a_nx_n=b$$ 
+hvor $a_1,a_2,\ldots,a_n$ er reelle tal. 
+
+\begin{defn}{}{}
+Et lineært ligningssystem er en mængde af $m $lineære ligninger  med de samme $n$ variabler, hvor $m$ og $n$ er positive heltal. Dette kan skrives på formen
+\begin{align*}
+a_{11}x_1+a_{12}x_2+&\cdots+a_{1n}x_n=b_1\\
+a_{21}x_1+a_{22}x_2+&\cdots+a_{2n}x_n=b_2\\
+&\vdots\\
+a_{m1}x_1+a_{m2}x_2+&\cdots +a_{mn}x_n=b_m
+\end{align*}
+hvor er $a_{ij}$ betegner koefficienten af $x_j$ i ligning $i$
+\end{defn}
+
+\begin{eks}
+\begin{align*}
+2x_1+3x_2+4x_4&=6\\
+-2x_2+4x_3&=2\\
+4x_1+7x_3+3x_4&=8\\
+\end{align*}
+
+\end{eks}
+
