--- a/incl/main/linear_algebra/matricer_vektorer/matricer.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/matricer.tex
@@ -12,9 +12,11 @@ Hvis $m=n$, er matricen kvadratisk.
 Elementet $a_{i,j}$ i $i'te$ række og $j'te$ søjle kaldes $(i,j)-indgangen$ i matricen. 
 \end{defn}
 
+%HVORFOR DUR REFERENCER IKKE HVAD FUCK HJÆLP FOR SATAN
+
 På figur \ref{fig:matrix_gen_eks} ses et generelt eksempel på en matrix $A = m \times n$.
 
-\begin{figure}[H] \label{fig:matrix_gen_eks}
+\begin{figure}[H]
 	\begin{center}
 $$
 A=
@@ -26,6 +28,8 @@ a_{i,1} & a_{i,2} & \ldots & a_{i,j} \\
 \end{bmatrix}
 $$
 	\end{center}
+	\caption{En generel matrix $A=m \times n$.}
+	\label{fig:matrix_gen_eks}
 \end{figure}
 
 Enhver række $i$ eller søjle $j$ er en \textit{vektor}. En matrix med én række kaldes en \textit{rækkevektor}, og en matrix med én søjle kaldes en \textit{søjlevektor}. I denne rapport noteres vektorer med små, fede bogstaver, såsom $\textbf{a}$ og $\textbf{b}$. Søjlevektorer noteres desuden ofte med et indeks tilsvarende søjlen i matricen, således 
