Update Matrix_vektor-produkt.tex and cmds.tex

--- a/incl/pre/cmds.tex
+++ b/incl/pre/cmds.tex
@@ -32,7 +32,7 @@
 \textbf{Example~\thechapter.\theexample}
 \phantom{.}\newline\noindent\rule{\textwidth}{0.4pt}
 }
-{\phantom{.}\newline\noindent\rule{\textwidth}{0.4pt}}  
+{\phantom{.}\newline\rule{\textwidth}{0.4pt}}  
 
 \newcounter{proof}[chapter]
 \renewenvironment{proof}{
