--- a/incl/main/linear_algebra/lineare_ligningssystemer.tex
+++ b/incl/main/linear_algebra/lineare_ligningssystemer.tex
@@ -34,8 +34,12 @@ Løsningen på dette system ses i eksempel \ref{eks_gauss}
 \end{eks}
 \phantom{g}\\\\
 Alle lineære ligningssystemer har enten ingen, præcis en eller uendelig mange løsninger.
-Alle ligningerne i systemet repræsenteres af linje hvis systemet er i 2 variable, og et plan i 3 variable, osv. Hvis disse ligningers er parallelle og forskellige, har systemet ingen løsning. Hvis ligningerne er forskellige, så har systemet præcis en løsning. Hvis ligningerne er ens har systemet uendelig mange løsninger.\\
-Et system der har en eller flere løsninger kaldes \textit{konsistent}, ellers kaldes det for \textit{inkonsistent}, da der ingen løsninger eksisterer.\\\\
+Alle ligningerne i systemet repræsenteres af linje hvis systemet er i 2 variable, og et plan i 3 variable, osv.
+Hvis disse ligningers er parallelle og forskellige, har systemet ingen løsning.
+Hvis ligningerne er forskellige, så har systemet præcis en løsning. 
+Hvis ligningerne er ens har systemet uendelig mange løsninger.\\
+Et system der har en eller flere løsninger kaldes \textit{konsistent}, ellers kaldes det for \textit{inkonsistent}, da der ingen løsninger eksisterer.
+\subsection{Ligningssystemer og matricer}
 Med udgangspunktet i eksmpel \ref{eks}, kan et lineært ligningssystem opstilles som en matrix ligning A\textbf{x}=\textbf{b}, hvor\\
 \begin{center}
 $A=
@@ -65,7 +69,8 @@ $
 \end{center}
 A kaldes for koefficientmatricen. 
 %efter hårdt sammenleje bliver A matricen og b til totalmatricen
-Totalmatrixen er dannet ved at kombinere koefficientmatricen med vektoren \textbf{b}. Totalmatrixen indeholder alle informationer der skal bruges til at løse et lineært ligningssystem.
+Totalmatrixen er dannet ved at kombinere koefficientmatricen med vektoren \textbf{b}.
+Totalmatrixen indeholder alle informationer der skal bruges til at løse et lineært ligningssystem.
 Ligningssystemet fra eksempel \ref{eks} skrevet som totalmatrix
 \begin{equation*}
   A=
@@ -76,5 +81,5 @@ x_1 & x_2 & x_3 & x_4 & x_5 & b \\
   -2 & 0 & 1 & 2 & 9 & 5 \\
   3 & 0 & -2 & -3 & -15 & -9 \\
 \end{block}
-\end{blockarray}
+\end{blockarray}.
 \end{equation*}
