Update mxsum.tex and cmds.tex

--- a/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
@@ -1,4 +1,4 @@
-\subsection{Matrixsum}
+\subsection{Matrixsum og skalarprodukt}
 %
 \begin{defn}{}{}
 Lad $A$ og $B$ være $m \times n$ matricer.
@@ -7,12 +7,14 @@ Lad $A$ og $B$ være $m \times n$ matricer.
 (A + B)_{i,j} = a_{i,j} + b_{i,j},
 \end{align*}
 for alle indgange.
-Lad $k$ være en skalar.
+Lad nu $k$ være en skalar.
 \textbf{Skalarproduktet} af $A$, noteret $kA$, er en $m \times n$ matrix, hvor
 \begin{align*}
 (kA)_{i,j} = ka_{i,j},
 \end{align*}
-for alle indgange.
-
+for alle indgange. Bemærk at $-1A = -A$
 \end{defn}
 %
+\begin{eks}
+as
+\end{eks}
