--- a/incl/pre/cmds.tex
+++ b/incl/pre/cmds.tex
@@ -39,9 +39,8 @@
 \bigskip
 \refstepcounter{proof}
 \textbf{Bevis~\thechapter.\theproof}
-\phantom{.}\newline\noindent\rule{\textwidth}{0.4pt}
-}
-{\phantom{.}\newline\noindent\rule{\textwidth}{0.4pt}}  
+\phantom{.}\newline\noindent}
+{\qed}  
 
 %farvet-commands
 \definecolor{myblue}{RGB}{89, 79, 191}
