--- a/incl/main/linear_algebra/gauss_elimination.tex
+++ b/incl/main/linear_algebra/gauss_elimination.tex
@@ -1,4 +1,5 @@
 \section{Gauss elimination}
+% 1.4
 % Sætning 1.4 kan vi bevise den
 En algoritme til løsningen af linære ligningssystemer er  rækkereduktionsalgoritmen, som omdanner en matrix fra en totalmatrice til reduceret trappeform.
 Når den bruges til at løse linære ligningssystemer, kaldes denne process for Gauss elimination.
@@ -12,7 +13,7 @@ Algortimen gennemgår således følgende skridt:
 \item Skab nuller under pivot-indgangen øverst i pivot-søjlen ved hjælp af rækkeudskiftning.
 \item Øverste række markeres som afsluttet og trin $1-3$ gennemføres nu på den næste række.
 \item Alle rækker med pivot-indgange skaleres så alle pivot-indgange er lig $1$.
-\item Ved rækkeudskiftning sikres nu $0$er over og under pivot-indgangene.
+\item Ved rækkeudskiftning sikres nu $0$'er over og under pivot-indgangene.
 \end{enumerate}
 % Eksempel
 \begin{eks}
@@ -98,11 +99,84 @@ x_1-x_5&=-2 &\iff x_1&=x_5-2 \\
 x_3-3x_5&=3 &\iff x_3&=-3x_5+3 \\
 x_4+2x_5&=-1 &\iff x_4&=-2x_5-1 \\
 \end{align*}
-Parameterfremstillingen for løsningen i $\R^5$ bliver således 
-
-
+Parameterfremstillingen for løsningen i $\R^5$ bliver således:
+  \begin{align*}
+    \mathbf{x} &= \begin{bmatrix}
+           x_{1} \\
+           x_{2} \\
+           x_{3} \\
+           x_{4} \\
+           x_{5} \\
+         \end{bmatrix} 
+         = \begin{bmatrix}
+           -2 \\
+           0 \\
+           3 \\
+           -1 \\
+           0 \\
+         \end{bmatrix}
+         +x_2 \begin{bmatrix}
+           0 \\
+           1 \\
+           0 \\
+           0 \\
+           0 \\
+         \end{bmatrix}
+         +x_5 \begin{bmatrix}
+           1 \\
+           0 \\
+           -3 \\
+           -2 \\
+           1 \\
+         \end{bmatrix}
+  \end{align*} 
+\label{eks_gauss}
+%frie variable
 \end{eks}
+%
+\subsection{Rang og nullitet}
+%her skal der stå et eller andet
+\begin{defn}{}{}
+Rangen af en matrix $A$ er antallet af pivotindgange, noteret $\text{rang}(A)$. \\
+Nulliteten af $A$ er antallet af søjler uden pivotindgange, noteret $\text{null}(A)$.
+\end{defn}
+%
+I en $m \times n$-matrix er $\text{rang}(A)+\text{null}(A)=n$
 
-
-\begin{thm}{}{konsitens}
+Med udgangspunkt i eksempel \ref{eks_gauss} bliver rang og nullitet i 
+$$A=\begin{blockarray}{ccccccc}
+x_1 & x_2 & x_3 & x_4 & x_5 & b \\
+\begin{block}{[ccccc|c]c}
+  1 & 0 & 0 & 0 & -1 & -2 \\
+  0 & 0 & 1 & 0 & 3 & 3 \\
+  0 & 0 & 0 & 1 & 2 & -1 \\
+\end{block}
+\end{blockarray}$$ 
+således $\text{rang}(A)=3$ og $\text{null}(A)=3$. 
+%hvilket er heldigt når der er 6 søjler
+\begin{thm}{Konsistens}{konsitens}
+Følgende udsagn er ækvivalente:
+\begin{enumerate}
+\item Matrixen $A\mathbf{x}=\mathbf{b}$ er konsistent.
+\item Vektoren $\mathbf{b}$ er en linearkombination af søjlerne i $A$
+\item Den reducerede trappeform af totalmatrixen $[A|\mathbf{b}]$ har ingen rækker af formen $[ 0 \ldots 0 | d  ]$, hvor $d \neq 0$.
+\end{enumerate}
 \end{thm}
+%
+\begin{proof}
+Lad $A$ være en $n \times m$ matrix og lad $\mathbf{b}$ være i $\R^m$ ud fra definition \ref{defn:mvp} følger det, at der eksisterer en vektor 
+$$    \mathbf{v} = \begin{bmatrix}
+		v_{1} \\
+        v_{2} \\
+        \vdots \\
+        v_{n} 
+        \end{bmatrix} $$
+i $\R^n$, der opfylder, at $A\mathbf{v}=\mathbf{b}$, hvis og kun hvis $$v_1 \mathbf{a_1}+v_2 \mathbf{a_2} + \ldots + v_n \mathbf{a_n}$$ hvilket er linearkombinationen af matricen og vektoren. 
+Det følger derfor at udsagn $(1)$ og udsagn $(2)$ er ækvivalente.
+Herefter bevises at $(1)$ og $(3)$ er ækvivalente. 
+Hvis udsagn $(3)$ er falsk følger det at  $$0 x_1+0 x_2 + \ldots + 0x_n =d$$ hvor $d\neq0$, da dette ikke har nogen løsning følger det, at ligningssystemet således bliver inkonsistent. 
+Såfremt dette er sandt gælder omvendt, at alle rækker i den reducerede trappeform indeholder en løsning, som også er løsning til $A\mathbf{x}=\mathbf{b}$. 
+Således er $(1)$ og $(3)$ ækvivalente.
+\end{proof}
+
+
