Update mxsum.tex and cmds.tex

--- a/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
@@ -15,6 +15,6 @@ Lad nu $k$ være en skalar.
 for alle indgange. Bemærk at $-1A = -A$
 \end{defn}
 %
-\begin{eks}
+\begin{proof}
 as
-\end{eks}
+\end{proof}
