--- a/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
@@ -6,7 +6,7 @@ Lad $A$ og $B$ være $m \times n$ matricer.
 Ligeledes er subtraktion mellem matricerne $A$ og $B$ muligt og indgangene i den resulterende matrix er $a_{i,j} - b_{i,j}$.
 Lad nu $k$ være en skalar.
 \textbf{Skalarproduktet} af $A$, noteret $kA$, er en $m \times n$ matrix, hvor de $(i,j)$'te indgange er $ka_{i,j}$.
-Bemærk at $1A = A$, $-1A = -A$ og $0A = O$.
+Bemærk at $1A = A$, $-1A = -A$ og $A - A = 0A = O$.
 \end{defn}
 %
 \begin{eks}
@@ -57,3 +57,10 @@ og
 \end{bmatrix}.
 \end{align*}
 \end{eks}
+%
+Ud fra disse operationer har matricer en række egenskaber, som er afgørende for lineær algebra.
+%
+\begin{thm}{}{mxprop}
+Lad $A$, $B$ og $C$ være $m \times n$ matricer, og lad $k$ og $s$ være skalarer. Så
+
+\end{thm}
