--- a/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
@@ -61,6 +61,16 @@ og
 Ud fra disse operationer har matricer en række egenskaber, som er afgørende for lineær algebra.
 %
 \begin{thm}{}{mxprop}
-Lad $A$, $B$ og $C$ være $m \times n$ matricer, og lad $k$ og $s$ være skalarer. Så
-
+Lad $A$, $B$ og $C$ være $m \times n$ matricer, og lad $k$ og $s$ være skalarer.
+Så har matricerne følgende egenskaber:
+\newlength{\enumlabel}
+\setlength{\enumlabel}{\widthof{(VI)}}
+\addtolength{\enumlabel}{\labelsep}
+\SetLabelAlign{center}{\makebox[\enumlabel]{(#1)}}
+\begin{enumerate}[label=\Roman*, align=center, labelwidth=\enumlabel, leftmargin=!]
+\item Første egenskab
+\item anden
+\item tredje
+\item osv.
+\end{enumerate}
 \end{thm}
