--- a/master.tex
+++ b/master.tex
@@ -13,7 +13,7 @@
 \def \projectsubtitle    {Lineær programmering}
 \def \projecttheme       {Lineær algebra}
 \def \projectdegree      {Matematik}
-\def \projectperiod      {Efterårssemesteret 2020}
+\def \projectperiod      {Forårssemesteret 2020}
 \def \projectnumber      {P2}
 \def \projectgroup       {B303c}
 \def \projectauthors     {
