Update gauss_elimination.tex and master.tex

--- a/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination.tex
+++ b/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination.tex
@@ -1,4 +1,4 @@
-\section{Gauss elimination}
+\subsection{Gauss elimination}
 % 1.4
 % Sætning 1.4 kan vi bevise den
 En algoritme til løsningen af linære ligningssystemer er  rækkereduktionsalgoritmen, som omdanner en matrix fra en totalmatrice til reduceret trappeform.
@@ -179,4 +179,7 @@ Såfremt dette er sandt gælder omvendt, at alle rækker i den reducerede trappe
 Således er $(1)$ og $(3)$ ækvivalente.
 \end{proof}
 
+\begin{eks}
+fisk
+\end{eks}
 
