Update span.tex and master.tex

--- a/master.tex
+++ b/master.tex
@@ -62,6 +62,8 @@
 	\include{incl/main/linear_algebra/Matrix_vektor-produkt}	
 	\include{incl/main/linear_algebra/loesning_til_lineaer}
 	\include{incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination}
+	\include{incl/main/linear_algebra/span/span}
+	
 
 % Appendicer indsættes inde i en appendices-blok og bliver nummereret med
 % bogstaver i stedet for tal
