--- a/master.tex
+++ b/master.tex
@@ -56,7 +56,7 @@
 	\include{incl/main/indledning/forord}
 	\include{incl/main/indledning/indledning}
 	
-% LINEÆRE ALGEBRA 
+% LINEÆR ALGEBRA 
 	\include{incl/main/linear_algebra/linear_algebra}
 	\include{incl/main/linear_algebra/lineare_ligningssystemer}
 	\include{incl/main/linear_algebra/Matrix_vektor-produkt}	
