--- a/incl/main/linear_algebra/linear_algebra.tex
+++ b/incl/main/linear_algebra/linear_algebra.tex
@@ -2,5 +2,5 @@
 %
 \input{incl/main/linear_algebra/matricer_vektorer/matricer.tex}
 	\input{incl/main/linear_algebra/matricer_vektorer/mxsum.tex}
-	
+	\input{incl/main/linear_algebra/matricer_vektorer/mxtrans.tex}
 	\input{incl/main/linear_algebra/matricer_vektorer/linearkom.tex}
