--- a/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
@@ -10,7 +10,7 @@ Bemærk at $1A = A$, $-1A = -A$ og $A - A = 0A = O$.
 \end{defn}
 %
 \begin{eks}
-Betragtes nu $3A$, $-B$ og $3A+B$, hvor 
+Betragt nu $3A$, $-B$ og $3A+B$, hvor 
 \begin{align*}
 A= 
 \begin{bmatrix}
@@ -64,13 +64,20 @@ Ud fra disse operationer har matricer en række egenskaber, som er afgørende fo
 Lad $A$, $B$ og $C$ være $m \times n$ matricer, og lad $k$ og $s$ være skalarer.
 Så har matricerne følgende egenskaber:
 \newlength{\enumlabel}
-\setlength{\enumlabel}{\widthof{(VI)}}
+\setlength{\enumlabel}{\widthof{(VII)}}
 \addtolength{\enumlabel}{\labelsep}
 \SetLabelAlign{center}{\makebox[\enumlabel]{(#1)}}
 \begin{enumerate}[label=\Roman*, align=center, labelwidth=\enumlabel, leftmargin=!]
-\item Første egenskab
-\item anden
-\item tredje
-\item osv.
+\item $A + B = B + A$.
+\item $(A + B) + C = A + (B + C)$.
+\item $A + O = A$.
+\item $A + (-A) = O$.
+\item $(ks)A = s(kA)$.
+\item $k(A + B) = kA + kB$.
+\item $(k + s)A = kA + sA$.
 \end{enumerate}
 \end{thm}
+
+\begin{proof}
+Det hele er trivielt xD.
+\end{proof}
