--- a/incl/main/linear_algebra/matricer_vektorer/linearkom.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/linearkom.tex
@@ -1,11 +1,20 @@
 \subsection{Linearkombination}
 
+....
+
+\begin{defn}{}{}
+En linear 
+
+\end{defn}
+
+
+
 Givet en matrix 
 
-$A=
+$$A=
 \begin{bmatrix}
 0 & 4 & 2 \\
 6 & 1 & 6 \\
 5 & 0 & 2 \\
 \end{bmatrix}
-$
+$$
