Update New Text Document.txt, New Text Document.txt, and 6 more files...

--- a/incl/main/linear_algebra/matricer_vektorer/mxtrans.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxtrans.tex
@@ -2,6 +2,7 @@
 \begin{defn}{}{mxtrans}
 Lad $A$ være en $m \times n$ matrix. \textbf{Transponeringen} til $A$, er en $n \times m$ matrix, noteret $A^T$, hvor $A$'s $(i,j)$te indgang er den $(j,i)$te indgang i $A^T$.
 \end{defn}
+En transponering af en matrice resulterer i en ny matrice, hvor rækkerne i den originale matrice kommer til at være søjlerne i den transponerede matrice.
 \begin{eks}
 Betragt nu $A^T$ og $(A+B)^T$, hvor 
 \begin{align*}
