--- a/incl/main/linear_algebra/matricer_vektorer/matricer.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/matricer.tex
@@ -23,7 +23,7 @@ A=
 \begin{bmatrix}
 a_{1,1} & a_{1,2} & \ldots & a_{1,j} \\
 a_{2,1} & a_{2,2} & \ldots & a_{2,j} \\
-\vdots  & \ldots  & \ddots & \vdots \\
+\vdots  & \vdots  & \ddots & \vdots \\
 a_{i,1} & a_{i,2} & \ldots & a_{i,j} \\
 \end{bmatrix}
 $$
