--- a/incl/pre/cmds.tex
+++ b/incl/pre/cmds.tex
@@ -11,7 +11,7 @@
 \newcommand{\C}{\mathbb{C}}          % komplekse tal
 \newcommand{\ind}{\mathbbm{1}}       % indikatorfunktion
 \newcommand{\bigO}{\mathcal{O}}      % store-O notation
-\newcommand{\S}{\mathcal{S}}		 % Pænt S?
+\renewcommand{\S}{\mathcal{S}}		 % Pænt S?
 \renewcommand{\vec}[1]{\bm{#1}}      % skriv vektorer med fed skrift
 \usepackage{xcolor}
 \usepackage{pgfplots}
