--- a/incl/main/linear_algebra/matricer_vektorer/mxtrans.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxtrans.tex
@@ -1,9 +1,10 @@
 \subsection{Matrix transponering}
 \begin{defn}{}{mxtrans}
-Lad $A$ være en $m \times n$ matrix. \textbf{Transponeringen} til $A$, er en $n \times m$ matrix, noteret $A^T$, hvor $A$'s $(i,j)$te indgang er den $(j,i)$te indgang i $A^T$.
+Lad $A$ være en $m \times n$ matrix. \textbf{Transponeringen} til $A$, er en $n \times m$ matrix, noteret $A^T$, hvor $A$'s $(i,j)$'te indgang er den $(j,i)$'te indgang i $A^T$.
 \end{defn}
 En transponering af en matrice resulterer i en ny matrice, hvor rækkerne i den originale matrice kommer til at være søjlerne i den transponerede matrice.
-\begin{eks}
+
+\begin{eks}\label{eks:trans}
 Betragt nu $A^T$ og $(A+B)^T$, hvor 
 \begin{align*}
 A= 
@@ -18,5 +19,27 @@ B=
 5	&	3	&	2
 \end{bmatrix}.
 \end{align*}
-
+Ud fra definition \ref{defn:mxtrans} haves
+\begin{align*}
+A^T =
+\begin{bmatrix}
+3	&	2\\
+-3	&	0\\
+1	&	4
+\end{bmatrix}
+\text{\phantom{---}og\phantom{---}}
+(A+B)^T=
+\begin{bmatrix}
+2	&	1	&	2\\
+7	&	3	&	6
+\end{bmatrix}^T
+=
+\begin{bmatrix}
+2	&	7\\
+1	&	3\\
+2	&	6
+\end{bmatrix}.
+\end{align*}
 \end{eks}
+
+\ref{eks:trans}
