Update mxsum.tex and mxtrans.tex

--- a/incl/main/linear_algebra/matricer_vektorer/mxtrans.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxtrans.tex
@@ -42,4 +42,17 @@ A^T =
 \end{align*}
 \end{eks}
 
-\ref{eks:trans}
+Følgende sætning viser, at transponering bevarer operationerne matrix summering og skalering.
+\begin{thm}{}{}
+Lad $A$ og $B$ være $m \times n$ matricer, og lad $k$ være en skalar.
+Så har matricerne følgende egenskaber:
+\begin{enumerate}[label=(\alph*)]
+\item $(A + B)^T = A^T + B^T$.
+\item $(kA)^T = kA^T$.
+\item $(A^T)^T = A$.
+\end{enumerate}
+\end{thm}
+
+\begin{proof}
+Trivielt?
+\end{proof}
