--- a/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxsum.tex
@@ -63,11 +63,7 @@ Ud fra disse operationer har matricer en række egenskaber, som er afgørende fo
 \begin{thm}{}{mxprop}
 Lad $A$, $B$ og $C$ være $m \times n$ matricer, og lad $k$ og $s$ være skalarer.
 Så har matricerne følgende egenskaber:
-\newlength{\enumlabel}
-\setlength{\enumlabel}{\widthof{(VII)}}
-\addtolength{\enumlabel}{\labelsep}
-\SetLabelAlign{center}{\makebox[\enumlabel]{(#1)}}
-\begin{enumerate}[label=\Roman*, align=center, labelwidth=\enumlabel, leftmargin=!]
+\begin{enumerate}[label=(\alph*)]
 \item $A + B = B + A$.
 \item $(A + B) + C = A + (B + C)$.
 \item $A + O = A$.
@@ -79,5 +75,5 @@ Så har matricerne følgende egenskaber:
 \end{thm}
 
 \begin{proof}
-Det hele er trivielt xD.
+Det hele er trivielt.
 \end{proof}
