--- a/incl/main/linear_algebra/matricer_vektorer/linearkom.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/linearkom.tex
@@ -1,20 +1,28 @@
 \subsection{Linearkombination}
 
-....
+.... metatekst
 
 \begin{defn}{}{}
-En linear 
+Givet matricerne $A_1, A_2, \ldots, A_k$ med dimensionerne $m \times n$, så er \textit{linearkombinationen} af $A_1, A_2, \ldots, A_k$ en matrix $B$ på formen 
+
+$$c_1A_1+c_2A_2+\ldots+c_kA_k=\sum\limits_{i=1}^k c_iA_i=B,$$
+
+med dimensionerne $m \times n$. 
+Linearkombinationen er mulig, hvis og kun hvis skalarerne $c_1, c_2, \ldots, c_k$ eksisterer. 
+Skalarerne kaldes linearkombinationens \textit{koefficienter}.
+\end{defn}
+%KILDE: https://www.statlect.com/matrix-algebra/linear-combinations
+
+I lineær algebra er det oftest række- eller søjlevektorer, der indgår i linearkombinationer. 
+
+
+
+
+
+
+
+\subsection{Matrix-vektorprodukt}
+
+\begin{defn}{}{}
 
 \end{defn}
-
-
-
-Givet en matrix 
-
-$$A=
-\begin{bmatrix}
-0 & 4 & 2 \\
-6 & 1 & 6 \\
-5 & 0 & 2 \\
-\end{bmatrix}
-$$
