--- a/incl/main/linear_algebra/loesning_til_lineaer.tex
+++ b/incl/main/linear_algebra/loesning_til_lineaer.tex
@@ -120,3 +120,26 @@ A=
 \end{eks}
 
 \subsection{Pivotindgange}
+\begin{defn}{}{}
+Pivotindgange betegnes som den første ikke nul indgang i enhver række i en matrix på trappeform. 
+\end{defn}
+
+\begin{align*}
+A=
+\begin{blockarray}{ccccc}
+x_1 & x_2 & x_3 & x_4 & b \\
+\begin{block}{[cccc|c]}
+1 & 0 & 5 & 0 & 0\\
+0 & 1 & 3 & 0 & 0\\
+0 & 0 & 0 & 1 & 0\\
+0 & 0 & 0 & 0 & 1\\
+\end{block}
+\end{blockarray}
+\end{align*}
+
+\begin{align*}
+x_1+5x_3&=0\\
+x_2+3x_3&=0\\
+x_4&=0\\
+0&=1
+\end{align*}
